static/terraboard.css
@media (max-width:767px) {
  .navbar-toggle {
    float: left;
  }

  .navbar-right {
    position: absolute;
    top: 0;
    right: 20px;
  }

  .breadcrumb {
    display: none;
  }

  h2.node-title {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

@media (min-width: 992px) {
  body, html, #mainrow, #leftcol {
    margin: 0;
    overflow: hidden;
    height:100%;
  }
  #nodes, #node {
    overflow-y: auto;
  }
  #nodes {
    height: calc(100% - 310px);
  }
  #node {
    height: 100%;
  }
}

body { padding-top: 60px; }
#chart {
  height: 310px;
}
#chart svg {
  margin-left: calc((100% - 310px)/2);
}
#chart svg g path, #chart svg g g, #nodeslist li, .panel-title a, .ack, .star,
  .resource-title, .resource-title ~ pre {
  cursor: pointer;
}
#chart > div {
  margin-top: calc(350px / 2);
}
#nodeslist .list-group-item .resource:hover,
#only-in-old .list-group-item:hover,
#only-in-new .list-group-item:hover {
  background-color: #d9edf7;
  background-image: none;
  color: #337ab7;
}
#nodeslist .list-group-item .glyphicon-star, .panel-title .glyphicon-star {
  float: right;
  color: orange;
  display: none;
}
#nodeslist .list-group-item.starred .glyphicon-star, .panel-title.starred .glyphicon-star {
  display: block;
}
#node .list-group {
  padding: 0 10px 0 10px;
}
#node .list-group.active {
  border-left: solid #4D90F0;
  padding-left: 7px;
}
.compile-error {
  color: red;
  font-weight: bold;
  white-space: normal;
}
.panel-title .badge {
  float: right;
  margin-right: 10px;
}
.back-to-top {
  position: fixed;
  top: 10px;
  left: 70px;
  display: none;
  height: 30px;
  z-index: 99999;
  cursor: pointer;
}
#node .diff-stats .progress {
  text-align: center;
  width: 5em;
  display: inline;
  float: right;
}
#nodeslist .node-name {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
#nodeslist .progress {
  text-align: center;
  display: inline;
  float: right;
  margin-left: 5px;
}
.btn-file {
  position: relative;
  overflow: hidden;
}
.btn-file input[type=file] {
  position: absolute;
  top: 0;
  right: 0;
  min-width: 100%;
  min-height: 100%;
  font-size: 100px;
  text-align: right;
  filter: alpha(opacity=0);
  opacity: 0;
  outline: none;
  background: white;
  cursor: inherit;
  display: block;
}
.btn-checkbox {
  top: -2px;
  color: #777;
  padding: 15px 0 15px 20px;
}
#nodeslist .progress-bar {
  text-indent: -9999px; // Hide text to the left
}
#nodeslist .progress-bar:hover {
  text-indent: 0;  // Reveal text
}
#nodeslist .progress-bar {
  float: right;
}
pre.sh_sourceCode .sh_oldfile {
  color: red;
}
.resource-title {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.resource-title:hover {
  text-overflow: clip;
  overflow: auto;
}
.glyphicon-ok.ack, .glyphicon.star {
  float: right;
  color: gray;
  padding-left: 5px;
}
.glyphicon-star.star:hover, .starred .star {
  content: "\e050";
  color: orange;
}
.glyphicon-ok.ack:hover {
  color: green;
}
div.acked, li.list-group-item.acked {
  opacity: 0.5;
}
.acked pre {
  display: none;
}
.acked .glyphicon-ok, .glyphicon-ok.acked {
  opacity: 1.0;
  color: green;
}
.acked .glyphicon-ok:hover, .glyphicon-ok.acked:hover {
  color: gray;
}
.all_acked {
  opacity: 0.5;
}
.navbar .breadcrumb {
  padding: 0;
  margin: 0 30px;
  background-color: inherit;
}
.navbar .breadcrumb .navbar-text {
  margin-left: 0;
  margin-right: 0;
}
#keys-help {
  position: fixed;
  display: none;
  z-index: 999999;
  left: 15%;
  top: 10px;
}
#keys-help .jumbotron {
  width: 40%px;
}
#keys-help .shortcuts {
  columns: 2;
  -webkit-columns: 2;
}
#keys-help .shortcut {
  display: inline-block;
}
.navbar-brand {
  padding: 0;
}
.navbar-brand img {
  height: 50px;
}

